# bond-bunny

./: .gitignore  .gitmodules  CRASH_FIXES.md  README.md  bitrate_test.c  build.gradle  gradlew  lint-baseline.xml  settings.gradle
docs/: PACKET_LOSS_ANALYSIS.md  SRTLA_FORK_IMPLEMENTATION.md  STALE_VIRTUAL_CONNECTION_ANALYSIS.md
docs/privacy-policy/: en.md
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  srtla_android_jni.cpp  srtla_android_wrapper.cpp  srtla_android_wrapper.h  srtla_connection.cpp  srtla_core.cpp  srtla_ip_manager.cpp  srtla_jni.cpp  srtla_protocol.cpp
src/main/cpp/include/: srtla_connection.h  srtla_core.h  srtla_ip_manager.h  srtla_protocol.h
src/main/java/com/dimadesu/bondbunny/: AboutActivity.java  ConnectionBitrateData.java  MainActivity.java  NativeSrtlaJni.java  NativeSrtlaService.java  SettingsActivity.java  UrlBuilderActivity.java  UrlItemView.java
src/main/java/com/example/srtla/: AboutActivity.java  CleanMainActivity.java  CleanSrtlaService.java  ConnectionBitrateData.java  ConnectionWindowView.java  EnhancedSrtlaService.java  MainActivity.java  NativeSrtlaJni.java  NativeSrtlaService.java  SRTLANative.java  SRTLATest.java  SettingsActivity.java  SrtlaConnection.java  SrtlaLogger.java  SrtlaProtocol.java  SrtlaReconnectionManager.java  SrtlaRegistrationManager.java  UrlBuilderActivity.java  WindowBarView.java
src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_notification.xml  retry_background.xml
src/main/res/layout/: activity_about.xml  activity_main.xml  activity_settings.xml  activity_url_builder.xml  connection_item.xml  url_item.xml
src/main/res/values/: ic_launcher_background.xml  strings.xml  styles.xml
srtla-lib/: build.gradle
srtla-lib/src/main/: AndroidManifest.xml
srtla-lib/src/main/cpp/: CMakeLists.txt  srtla_android_jni.cpp
srtla-lib/src/main/java/com/dimadesu/bondbunny/: ConnectionBitrateData.java  NativeSrtlaJni.java  SrtlaEngine.kt  SrtlaSender.java  SrtlaStatsView.java  WindowBarView.java
srtla-lib/src/main/java/com/dimadesu/bondbunny/moblink/: MoblinkManager.kt  MoblinkProtocol.kt  MoblinkStreamer.kt
srtla-lib/src/main/res/layout/: connection_item.xml  relay_item.xml  srtla_stats_view.xml
